[package]
name = "pallet-beefy"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "shawntabrizi-maxboundedlen-start" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "shawntabrizi-maxboundedlen-start" }

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "shawntabrizi-maxboundedlen-start" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "shawntabrizi-maxboundedlen-start" }

pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "shawntabrizi-maxboundedlen-start" }

beefy-primitives = { path = "../beefy-primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "shawntabrizi-maxboundedlen-start" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "shawntabrizi-maxboundedlen-start" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "shawntabrizi-maxboundedlen-start" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"beefy-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-session/std",
]
