[package]
name = "beefy-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-guard-election-ecw-burnin" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-guard-election-ecw-burnin" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-guard-election-ecw-burnin" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-guard-election-ecw-burnin" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-guard-election-ecw-burnin" }

[dev-dependencies]
hex-literal = "0.3"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
